Pie charting figure added.

--- a/Pyber.ipynb
+++ b/Pyber.ipynb
@@ -2200,7 +2200,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1c8e54ca",
+   "id": "6f8d5e3c",
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2259,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "05557273",
+   "id": "72cc693e",
    "metadata": {},
    "outputs": [
     {
@@ -2294,7 +2294,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "55a97aca",
+   "id": "1ff905cc",
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2353,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "29d83d91",
+   "id": "6b6d1da9",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c31c094a",
+   "id": "135faf34",
    "metadata": {},
    "outputs": [
     {
@@ -2471,7 +2471,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6bbd3011",
+   "id": "b344d5e2",
    "metadata": {},
    "outputs": [
     {
@@ -2505,8 +2505,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "31b9f686",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        4327.93\n",
+       "Suburban    19356.33\n",
+       "Urban       39854.38\n",
+       "Name: fare, dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the sum of the fares for each city type.\n",
+    "sum_fares_by_type = pyber_data_df.groupby([\"type\"]).sum()[\"fare\"]\n",
+    "sum_fares_by_type"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f500ee41",
+   "id": "76e82dff",
    "metadata": {},
    "outputs": [],
    "source": []
